--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,21 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // RecyclerView
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
+
+    //Room (for database)
+    implementation "androidx.room:room-runtime:2.4.3"
+    annotationProcessor "androidx.room:room-compiler:2.4.3"
+
+    // Scalable Size Unit (support for different screen size)
+    implementation "com.intuit.sdp:sdp-android:1.0.6"
+    implementation "com.intuit.ssp:ssp-android:1.0.6"
+
+    //Material Design
+    implementation "com.google.android.material:material:1.6.1"
+
+    //Rounded ImageView
+    implementation "com.makeramen:roundedimageview:2.3.0"
 }
